// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShowMore renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <p
      class="m-0 text-md text-graphite font-regular"
    >
      <span
        width="0"
      >
        <span />
        <span>
          Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis tenetur est asperiores. Inventore quam vel neque voluptatum, tenetur consectetur sapiente veniam, sint expedita voluptate reiciendis illum numquam officia obcaecati dicta? Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis tenetur est asperiores. Inventore quam vel neque voluptatum, tenetur consectetur sapiente veniam, sint expedita voluptate reiciendis illum numquam officia obcaecati dicta?
        </span>
        <span
          style="position: fixed; visibility: hidden; top: 0px; left: 0px;"
        >
          …
        </span>
      </span>
    </p>
    <button
      aria-disabled="false"
      class="base-Button text-lg justify-center select-none appearance-none m-0 relative normal-case align-middle duration-350 ease-out shrink-0 outline-none [&+&]:ml-4 cursor-pointer border-none px-0 bg-transparent h-[1.5em] hover:text-blue hover:underline active:text-blue active:underline focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] focus-visible:rounded-sm inline-flex items-center transition-none"
      data-component-type="button"
      role="button"
      tabindex="0"
      type="button"
    >
      <span
        class="items-center inline-flex font-semibold text-blue text-md"
      >
        Show more
        <div
          class="flex-1 w-4 h-4 text-graphite ml-[0.5rem] rotate-90 text-lg/none"
        >
          <svg
            class="PicassoSvgChevronRight16-root text-graphite"
            style="min-width: 16px; min-height: 16px;"
            viewBox="0 0 16 16"
          >
            <path
              d="m10.5 6.793.707.707L6.5 12.207l-.707-.707 4-4-4-4 .707-.707 4 4Z"
            />
          </svg>
        </div>
      </span>
    </button>
  </div>
</div>
`;

exports[`ShowMore when custom lessText text is specified should render with custom action link 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <p
      class="m-0 text-md text-graphite font-regular"
    >
      <span
        width="0"
      >
        <span />
        <span>
          Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis tenetur est asperiores. Inventore quam vel neque voluptatum, tenetur consectetur sapiente veniam, sint expedita voluptate reiciendis illum numquam officia obcaecati dicta? Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis tenetur est asperiores. Inventore quam vel neque voluptatum, tenetur consectetur sapiente veniam, sint expedita voluptate reiciendis illum numquam officia obcaecati dicta?
        </span>
        <span
          style="position: fixed; visibility: hidden; top: 0px; left: 0px;"
        >
          …
        </span>
      </span>
    </p>
    <button
      aria-disabled="false"
      class="base-Button text-lg justify-center select-none appearance-none m-0 relative normal-case align-middle duration-350 ease-out shrink-0 outline-none [&+&]:ml-4 cursor-pointer border-none px-0 bg-transparent h-[1.5em] hover:text-blue hover:underline active:text-blue active:underline focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] focus-visible:rounded-sm inline-flex items-center transition-none"
      data-component-type="button"
      role="button"
      tabindex="0"
      type="button"
    >
      <span
        class="items-center inline-flex font-semibold text-blue text-md"
      >
        Show more
        <div
          class="flex-1 w-4 h-4 text-graphite ml-[0.5rem] rotate-90 text-lg/none"
        >
          <svg
            class="PicassoSvgChevronRight16-root text-graphite"
            style="min-width: 16px; min-height: 16px;"
            viewBox="0 0 16 16"
          >
            <path
              d="m10.5 6.793.707.707L6.5 12.207l-.707-.707 4-4-4-4 .707-.707 4 4Z"
            />
          </svg>
        </div>
      </span>
    </button>
  </div>
</div>
`;

exports[`ShowMore when custom showMore text is specified should render with custom action link 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <p
      class="m-0 text-md text-graphite font-regular"
    >
      <span
        width="0"
      >
        <span />
        <span>
          Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis tenetur est asperiores. Inventore quam vel neque voluptatum, tenetur consectetur sapiente veniam, sint expedita voluptate reiciendis illum numquam officia obcaecati dicta? Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis tenetur est asperiores. Inventore quam vel neque voluptatum, tenetur consectetur sapiente veniam, sint expedita voluptate reiciendis illum numquam officia obcaecati dicta?
        </span>
        <span
          style="position: fixed; visibility: hidden; top: 0px; left: 0px;"
        >
          …
        </span>
      </span>
    </p>
    <button
      aria-disabled="false"
      class="base-Button text-lg justify-center select-none appearance-none m-0 relative normal-case align-middle duration-350 ease-out shrink-0 outline-none [&+&]:ml-4 cursor-pointer border-none px-0 bg-transparent h-[1.5em] hover:text-blue hover:underline active:text-blue active:underline focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] focus-visible:rounded-sm inline-flex items-center transition-none"
      data-component-type="button"
      role="button"
      tabindex="0"
      type="button"
    >
      <span
        class="items-center inline-flex font-semibold text-blue text-md"
      >
        Display everything
        <div
          class="flex-1 w-4 h-4 text-graphite ml-[0.5rem] rotate-90 text-lg/none"
        >
          <svg
            class="PicassoSvgChevronRight16-root text-graphite"
            style="min-width: 16px; min-height: 16px;"
            viewBox="0 0 16 16"
          >
            <path
              d="m10.5 6.793.707.707L6.5 12.207l-.707-.707 4-4-4-4 .707-.707 4 4Z"
            />
          </svg>
        </div>
      </span>
    </button>
  </div>
</div>
`;

exports[`ShowMore when disableToggle prop is true should render version without action link 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <p
      class="m-0 text-md text-graphite font-regular"
    >
      <span
        width="0"
      >
        <span />
        <span>
          Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis tenetur est asperiores. Inventore quam vel neque voluptatum, tenetur consectetur sapiente veniam, sint expedita voluptate reiciendis illum numquam officia obcaecati dicta? Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis tenetur est asperiores. Inventore quam vel neque voluptatum, tenetur consectetur sapiente veniam, sint expedita voluptate reiciendis illum numquam officia obcaecati dicta?
        </span>
        <span
          style="position: fixed; visibility: hidden; top: 0px; left: 0px;"
        >
          …
        </span>
      </span>
    </p>
  </div>
</div>
`;

exports[`ShowMore when initialExpanded prop is true should render expanded version 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <p
      class="m-0 text-md text-graphite font-regular"
    >
      Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis tenetur est asperiores. Inventore quam vel neque voluptatum, tenetur consectetur sapiente veniam, sint expedita voluptate reiciendis illum numquam officia obcaecati dicta? Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis tenetur est asperiores. Inventore quam vel neque voluptatum, tenetur consectetur sapiente veniam, sint expedita voluptate reiciendis illum numquam officia obcaecati dicta?
    </p>
    <button
      aria-disabled="false"
      class="base-Button text-lg justify-center select-none appearance-none m-0 relative normal-case align-middle duration-350 ease-out shrink-0 outline-none [&+&]:ml-4 cursor-pointer border-none px-0 bg-transparent h-[1.5em] hover:text-blue hover:underline active:text-blue active:underline focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] focus-visible:rounded-sm inline-flex items-center transition-none"
      data-component-type="button"
      role="button"
      tabindex="0"
      type="button"
    >
      <span
        class="items-center inline-flex font-semibold text-blue text-md"
      >
        Show less
        <div
          class="flex-1 w-4 h-4 text-graphite ml-[0.5rem] rotate-90 text-lg/none"
        >
          <svg
            class="PicassoSvgChevronRight16-root text-graphite rotate-180"
            style="min-width: 16px; min-height: 16px;"
            viewBox="0 0 16 16"
          >
            <path
              d="m10.5 6.793.707.707L6.5 12.207l-.707-.707 4-4-4-4 .707-.707 4 4Z"
            />
          </svg>
        </div>
      </span>
    </button>
  </div>
</div>
`;

exports[`ShowMore when initialExpanded prop is true when show less link is clicked should render collapsed version 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <p
      class="m-0 text-md text-graphite font-regular"
    >
      <span
        width="0"
      >
        <span />
        <span>
          Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis tenetur est asperiores. Inventore quam vel neque voluptatum, tenetur consectetur sapiente veniam, sint expedita voluptate reiciendis illum numquam officia obcaecati dicta? Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis tenetur est asperiores. Inventore quam vel neque voluptatum, tenetur consectetur sapiente veniam, sint expedita voluptate reiciendis illum numquam officia obcaecati dicta?
        </span>
        <span
          style="position: fixed; visibility: hidden; top: 0px; left: 0px;"
        >
          …
        </span>
      </span>
    </p>
    <button
      aria-disabled="false"
      class="base-Button text-lg justify-center select-none appearance-none m-0 relative normal-case align-middle duration-350 ease-out shrink-0 outline-none [&+&]:ml-4 cursor-pointer border-none px-0 bg-transparent h-[1.5em] hover:text-blue hover:underline active:text-blue active:underline focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] focus-visible:rounded-sm inline-flex items-center transition-none"
      data-component-type="button"
      role="button"
      tabindex="0"
      type="button"
    >
      <span
        class="items-center inline-flex font-semibold text-blue text-md"
      >
        Show more
        <div
          class="flex-1 w-4 h-4 text-graphite ml-[0.5rem] rotate-90 text-lg/none"
        >
          <svg
            class="PicassoSvgChevronRight16-root text-graphite"
            style="min-width: 16px; min-height: 16px;"
            viewBox="0 0 16 16"
          >
            <path
              d="m10.5 6.793.707.707L6.5 12.207l-.707-.707 4-4-4-4 .707-.707 4 4Z"
            />
          </svg>
        </div>
      </span>
    </button>
  </div>
</div>
`;

exports[`ShowMore when show more link is clicked should render expanded version 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <p
      class="m-0 text-md text-graphite font-regular"
    >
      Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis tenetur est asperiores. Inventore quam vel neque voluptatum, tenetur consectetur sapiente veniam, sint expedita voluptate reiciendis illum numquam officia obcaecati dicta? Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis tenetur est asperiores. Inventore quam vel neque voluptatum, tenetur consectetur sapiente veniam, sint expedita voluptate reiciendis illum numquam officia obcaecati dicta?
    </p>
    <button
      aria-disabled="false"
      class="base-Button text-lg justify-center select-none appearance-none m-0 relative normal-case align-middle duration-350 ease-out shrink-0 outline-none [&+&]:ml-4 cursor-pointer border-none px-0 bg-transparent h-[1.5em] hover:text-blue hover:underline active:text-blue active:underline focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] focus-visible:rounded-sm inline-flex items-center transition-none"
      data-component-type="button"
      role="button"
      tabindex="0"
      type="button"
    >
      <span
        class="items-center inline-flex font-semibold text-blue text-md"
      >
        Show less
        <div
          class="flex-1 w-4 h-4 text-graphite ml-[0.5rem] rotate-90 text-lg/none"
        >
          <svg
            class="PicassoSvgChevronRight16-root text-graphite rotate-180"
            style="min-width: 16px; min-height: 16px;"
            viewBox="0 0 16 16"
          >
            <path
              d="m10.5 6.793.707.707L6.5 12.207l-.707-.707 4-4-4-4 .707-.707 4 4Z"
            />
          </svg>
        </div>
      </span>
    </button>
  </div>
</div>
`;
